add bootstrap and change line endings

--- a/MyFirstWebsite/Views/Movies/Create.cshtml
+++ b/MyFirstWebsite/Views/Movies/Create.cshtml
@@ -55,11 +55,11 @@
         </div>
 
         <p>
-            <input type="submit" value="Create" />
+            <input type="submit" value="Create" class="btn" />
         </p>
     </fieldset>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { }, new { @class = "btn" })
 </div>
