--- a/MyFirstWebsite/Views/Movies/Details.cshtml
+++ b/MyFirstWebsite/Views/Movies/Details.cshtml
@@ -9,27 +9,25 @@
 <fieldset>
     <legend>Movie</legend>
 
-    <div class="display-label">Title</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Title)
-    </div>
+    <dl>
+        <dt>Title</dt>
+        <dd>@Html.DisplayFor(model => model.Title)</dd>
 
-    <div class="display-label">ReleaseDate</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.ReleaseDate)
-    </div>
+        <dt>Release Date</dt>
+        <dd>@Html.DisplayFor(model => model.ReleaseDate)</dd>
 
-    <div class="display-label">Genre</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Genre)
-    </div>
+        <dt>Genre</dt>
+        <dd>@Html.DisplayFor(model => model.Genre)</dd>
 
-    <div class="display-label">Price</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Price)
-    </div>
+        <dt>Price</dt>
+        <dd>@Html.DisplayFor(model => model.Price)</dd>
+
+        <dt>Rating</dt>
+        <dd>@Html.DisplayFor(model => model.Rating)</dd>
+    </dl>
+
 </fieldset>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id=Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }, new { @class = "btn" }) |
+    @Html.ActionLink("Back to List", "Index", new { }, new { @class = "btn" })
 </p>
