--- a/MyFirstWebsite/Views/Movies/Index.cshtml
+++ b/MyFirstWebsite/Views/Movies/Index.cshtml
@@ -7,9 +7,10 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create", new object { }, new { @class = "btn btn-primary" })
+    @Html.ActionLink("Search", "SearchIndex", new { }, new { @class = "btn" })
 </p>
-<table>
+<table class="table">
     <tr>
         <th>
             Title
@@ -45,9 +46,9 @@
             @Html.DisplayFor(modelItem => item.Rating)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.ActionLink("Edit", "Edit", new { id = item.ID }, new { @class = "btn btn-mini" }) |
+            @Html.ActionLink("Details", "Details", new { id = item.ID }, new { @class = "btn btn-mini" }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.ID }, new { @class = "btn btn-mini" })
         </td>
     </tr>
 }
