--- a/MyFirstWebsite/Views/Movies/SearchIndex.cshtml
+++ b/MyFirstWebsite/Views/Movies/SearchIndex.cshtml
@@ -1,21 +1,21 @@
 ﻿@model IEnumerable<MyFirstWebsite.Models.Movie>
 
 @{
-    ViewBag.Title = "SearchIndex";
+    ViewBag.Title = "Search Index";
 }
 
-<h2>SearchIndex</h2>
+<h2>Search Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create", new { }, new { @class = "btn btn-primary" })
     @using (Html.BeginForm("SearchIndex", "Movies", FormMethod.Get))
     {   
          <p> Genre: @Html.DropDownList("movieGenre", "All")  
            Title: @Html.TextBox("SearchString")
-         <input type="submit" value="Filter" /></p>
+         <input type="submit" value="Filter" class="btn btn-info"/></p>
         }
 </p>
-<table>
+<table  class="table">
     <tr>
         <th>
             Title
@@ -47,9 +47,9 @@
             @Html.DisplayFor(modelItem => item.Price)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.ActionLink("Edit", "Edit", new { id = item.ID }, new { @class = "btn btn-mini" }) |
+            @Html.ActionLink("Details", "Details", new { id = item.ID }, new { @class = "btn btn-mini" }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.ID }, new { @class = "btn btn-mini" })
         </td>
     </tr>
 }
