--- a/MyFirstWebsite/Views/Shared/_Layout.cshtml
+++ b/MyFirstWebsite/Views/Shared/_Layout.cshtml
@@ -3,32 +3,71 @@
 <head>
     <meta charset="utf-8" />
     <title>@ViewBag.Title</title>
-    <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
-    <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
+
+    <!-- Le styles -->
+    <link href="@Url.Content("~/Content/bootstrap/css/bootstrap.css")" rel="stylesheet">
+    <style>
+      body {
+        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+      }
+    </style>
+    <link href="@Url.Content("~/Content/bootstrap/css/bootstrap-responsive.css")" rel="stylesheet">
 </head>
 <body>
-    <div class="page">
-        <header>
-            <div id="title">
-                <h1>MVC Movie App</h1>
-            </div>
-            <div id="logindisplay">
-                @Html.Partial("_LogOnPartial")
-            </div>
-            <nav>
-                <ul id="menu">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Movies", "Index", "Movies")</li>
-                </ul>
-            </nav>
-        </header>
-        <section id="main">
-            @RenderBody()
-        </section>
-        <footer>
-        </footer>
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="#">MVC Movie App</a>
+          <div class="btn-group pull-right">
+            @Html.Partial("_LogOnPartial")
+            <!--<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+              <i class="icon-user"></i> Username
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Profile</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Sign Out</a></li>
+            </ul>-->
+          </div>
+          <div class="nav-collapse">
+            <ul class="nav">
+              <li class="active">@Html.ActionLink("Home", "Index", "Home")</li>
+              <li>@Html.ActionLink("About", "About", "Home")</li>
+              <li>@Html.ActionLink("Movies", "Index", "Movies")</li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
     </div>
+
+    <div class="container">
+       @RenderBody()
+    </div> <!-- /container -->
+
+
+
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="@Url.Content("~/Content/bootstrap/js/jquery.js")"></script>
+    <script src="@Url.Content("~/Content/bootstrap/js/bootstrap-transition.js")"></script>
+    <script src="@Url.Content("~/Content/bootstrap/js/bootstrap-alert.js")"></script>
+    <script src="@Url.Content("~/Content/bootstrap/js/bootstrap-modal.js")"></script>
+    <script src="@Url.Content("~/Content/bootstrap/js/bootstrap-dropdown.js")"></script>
+    <script src="@Url.Content("~/Content/bootstrap/js/bootstrap-scrollspy.js")"></script>
+    <script src="@Url.Content("~/Content/bootstrap/js/bootstrap-tab.js")"></script>
+    <script src="@Url.Content("~/Content/bootstrap/js/bootstrap-tooltip.js")"></script>
+    <script src="@Url.Content("~/Content/bootstrap/js/bootstrap-popover.js")"></script>
+    <script src="@Url.Content("~/Content/bootstrap/js/bootstrap-button.js")"></script>
+    <script src="@Url.Content("~/Content/bootstrap/js/bootstrap-collapse.js")"></script>
+    <script src="@Url.Content("~/Content/bootstrap/js/bootstrap-carousel.js")"></script>
+    <script src="@Url.Content("~/Content/bootstrap/js/bootstrap-typeahead.js")"></script>
 </body>
 </html>
